ClientApp/src/app/notify/notify.component.css
.people {
  vertical-align: middle;
  float: left;
  margin-left: 2px;
  margin-top: 5px;
  margin-bottom: 1px;
  width: 10px;
}


.active_agents_txt{
  margin-top: 10px;
  margin-bottom: 15px;
}

.cloudIcon {
  vertical-align: middle;
}

.chat {
  border-style: solid;
  border-width: 1px;
  height: 300px;
  overflow-y: auto;
}

.online_icon{
  margin-right: 5px;
}

.sendButton {
  background-color: white;
  height: 34px;
  width: 35px;
  margin: 5px;
  display: inline-block;
  vertical-align: middle;
}

.sendIcon {
  font-size: 20px;
}

.chat::-webkit-scrollbar {
  display: none;
}

.head_of_sms {
  margin-top: 5px;
  border-style: solid;
  border-width: 1px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  margin-top: 10px;
  padding: 5px;
  display: flex;
  position: relative;
}

.title {
  vertical-align: middle;
}

.details_div {
  font-size: 10px;
}

.textBar {
  border-style: solid;
  border-width: 1px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  overflow:auto;
  display: flex;
  width:auto;
  align-self: center;
}

.textBar::-webkit-scrollbar {
  display: none;
}

.textMessage {
  margin-left: 5px;
  margin-top: 10px;
  overflow-wrap: break-word;
  display: inline-block;
  vertical-align: middle;
  border-radius: 3px;
  width: 100%;
}

.textMessage::-webkit-scrollbar {
  display: none;
}

.date {
  float: right;
  font-size: 8px;
  margin-right: 25px;
}

.responseDate {
  float: left;
  font-size: 8px;
  margin-left: 25px;
}

p {
  clear: both;
}

.myMessage {
	position: relative;
	max-width: 60%;
  margin-right: 15px;
  margin-left: 15px;
  margin-top: 10px;
  margin-bottom: 10px;
  float: right;
  overflow-wrap: break-word;

	background-color: lightskyblue;
	padding: 15px 15px;
	font-size: 10px;
	border-radius: 1rem;
  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
}

.response {
	max-width: 60%;
  margin-right: 15px;
  margin-left: 15px;
  margin-top: 10px;
  margin-bottom: 10px;
  float: left;
	background-color: #fff;
	padding: 15px 15px;
	font-size: 10px;
	border-radius: 1rem;
  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
}

